<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_detail"
            android:layout_marginTop="29dp"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:paddingTop="28dp"
            android:paddingBottom="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_card_detail"
            android:layout_width="0dp"
            android:layout_height="225dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="16dp">

            <ImageView
                android:id="@+id/card_logo"
                android:layout_width="38dp"
                android:layout_height="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/card_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="10dp"
                android:textColor="#141414"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:src="@drawable/ic_user"
                android:id="@+id/card_name_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/card_balance_dop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number" />

            <TextView
                android:id="@+id/card_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGray"
                android:textSize="17sp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toTopOf="@+id/card_balance_dop"
                app:layout_constraintEnd_toStartOf="@+id/card_valid"
                app:layout_constraintStart_toEndOf="@+id/card_name_logo"
                app:layout_constraintTop_toBottomOf="@+id/card_number" />

            <TextView
                android:id="@+id/card_valid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="7sp"
                android:text="@string/card_valid"
                android:textColor="@color/colorDarkGray"
                android:textAllCaps="true"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/card_name_logo"
                app:layout_constraintBottom_toTopOf="@+id/card_valid" />

            <TextView
                android:id="@+id/card_valid"
                android:textColor="@color/colorDarkGray"
                android:textSize="17sp"
                android:lineSpacingExtra="5sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/card_valid_title"
                app:layout_constraintBottom_toBottomOf="@id/card_name_logo"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/card_balance_dop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="1sp"
                android:textColor="@color/colorDark"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/card_balance_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/card_balance_title" />

            <TextView
                android:id="@+id/card_balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/card_balance"
                android:textColor="@color/colorDarkGray"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/card_balance_value"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/card_balance_value"
                android:textSize="18sp"
                android:lineSpacingExtra="5sp"
                android:textColor="@color/colorDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_currency"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_detail">

            <TextView
                android:id="@+id/change_currency_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_currency_title"
                android:textColor="@color/colorDark"
                android:textSize="20sp"
                android:paddingBottom="28dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <GridLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="1"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_currency_title">

                <LinearLayout
                    android:id="@+id/change_gbp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/currency_checkbox_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:tag="@+id/currency_text"
                        android:id="@+id/change_gbp_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:selectAllOnFocus="true"
                        android:textColor="@drawable/currency_checkbox_text_selector"
                        android:text="@string/currency_gbp_symbol"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/change_gbp_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:selectAllOnFocus="true"
                        android:textColor="@drawable/currency_checkbox_text_selector"
                        android:text="@string/currency_gbp"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/change_eur"
                    android:background="@drawable/currency_checkbox_selector"
                    android:layout_gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/change_eur_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@drawable/currency_checkbox_text_selector"
                        android:text="@string/currency_eur_symbol"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/change_eur_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:textColor="@drawable/currency_checkbox_text_selector"
                        android:text="@string/currency_eur"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/change_rub"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/currency_checkbox_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/change_rub_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@drawable/currency_checkbox_text_selector"
                        android:text="@string/currency_rub_symbol"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/change_rub_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@drawable/currency_checkbox_text_selector"
                        android:text="@string/currency_rub"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_box_w"
            android:maxHeight="264dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="264dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_currency">

            <TextView
                android:id="@+id/transaction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="22dp"
                android:paddingEnd="22dp"
                android:text="@string/transaction_title"
                android:textColor="#141414"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/transaction_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transaction_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transaction_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>